Created the navigation component

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <title>Frontend Mentor | Browser extensions manager UI</title>
   </head>
-  <body>
+  <body class="bg-neutral-200 font-noto-sans">
     <div id="root"></div>
     <script type="module" src="./src/main.jsx"></script>
   </body>
